AC_COPYRIGHT([Cyopyright (c) 2008 Dennis Moellegaard Pedersen <dennis@moellegaard.dk>])
AC_INIT([bzlauncher], [v0.10a], [dennis@moellegaard.dk])
AC_CONFIG_SRCDIR([src])
AC_CONFIG_HEADERS([config.h])

AC_CANONICAL_HOST
AC_LANG(C++)

AM_INIT_AUTOMAKE(bzlauncher, 0.10a)

AC_GNU_SOURCE
AC_PROG_CC
AC_PROG_CXX
AC_PROG_CXXCPP
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_MAKE_SET

AC_CHECK_TOOL(STRIP, strip)

AC_ARG_ENABLE(debug,   [  --enable-debug        enable debug])

AC_MSG_CHECKING(for debug)
AC_MSG_RESULT($enable_debug)

dnl CCACHE

AC_MSG_CHECKING(for ccache)
ccache=`which ccache`
if test "x$ccache" != "x"; then
	GCC="$ccache $GCC"
	CC="$ccache $CC"
	GXX="$ccache $GXX"
	CXX="$ccache $CXX"
	AC_MSG_RESULT($ccache)
else
	AC_MSG_RESULT(not found)
fi
AC_SUBST(ccache)

AM_OPTIONS_WXCONFIG

if test x$enable_debug = xyes; then
	AM_PATH_WXCONFIG(2.8.4, wxWin=1, wxWin=0, [], [--debug])
	#DEBUG_FLAGS="-W -Wall -Wshadow -Wundef -g -ggdb -fno-inline -D__DEBUG__ -fmessage-length=0 -D_GLIBCXX_DEBUG -D_GLIBCXX_DEBUG_PEDANTIC"
	DEBUG_FLAGS="-W -Wall -Wshadow -Wundef -g -ggdb"
else
	AM_PATH_WXCONFIG(2.8.4, wxWin=1, wxWin=0, [])
	DEBUG_FLAGS=""
fi

if test "$wxWin" != 1; then
	AC_MSG_ERROR([
		wxWidgets must be installed on your system but wx-config couldn't be found.
		Please check that wx-config is in path or specified by --with-wx-config=path 
		flag, the directory where wxWidgets libraries are installed (returned by
		'wx-config --libs' command) is in LD_LIBRARY_PATH or equivalent variable and
		wxWidgets version is 2.8.4 or above.
	])
fi

AC_CACHE_SAVE

CXXFLAGS="$CXXFLAGS $DEBUG_FLAGS"
LDFLAGS="$LDFLAGS"

AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
