bin_PROGRAMS = bzlauncher

bzlauncher_SOURCES = aboutdlg_impl.cpp config.cpp gui.cpp listserverhandler.cpp main.cpp mainframe_impl.cpp query.cpp server.cpp serverdlg_impl.cpp serverparser.cpp serverping.cpp updatingdlg_impl.cpp view.cpp

bzlauncher_CXXFLAGS = $(WX_CXXFLAGS)
bzlauncher_LDADD = $(WX_LIBS)

noinst_HEADERS = about32.h aboutdlg_impl.h bzflag32.h config.h favorite32.h gui.h listserverhandler.h main.h mainframe_impl.h ping32.h query.h refresh32.h search32.h server.h serverdlg_impl.h serverparser.h serverping.h stop22.h updatingdlg_impl.h view.h
