bin_PROGRAMS = bzlauncher 
SUBDIR = datasrc

bzlauncher_SOURCES = \
	aboutdlg_impl.cpp \
	config.cpp gui.cpp \
	datactrl.cpp \
	datasrc.cpp \
	label.cpp \
	listserver.cpp \
	listserverhandler.cpp \
	main.cpp \
	mainframe_impl.cpp \
	ping.cpp \
	query.cpp \
	server.cpp \
	serverdlg_impl.cpp \
	updatingdlg_impl.cpp \
	view.cpp 

bzlauncher_CXXFLAGS = $(WX_CXXFLAGS)
bzlauncher_LDADD = $(WX_LIBS)

noinst_HEADERS = \
	about32.h \
	aboutdlg_impl.h \
	attribute.h \
	bzflag32.h \
	config.h \
	datactrl.h \
	datasrc.h \
	favorite32.h \
	gui.h \
	label.h \
	listserver.h \
	listserverhandler.h \
	main.h \
	mainframe_impl.h \
	ping.h \
	ping32.h \
	query.h \
	refresh32.h \
	search32.h \
	server.h \
	serverdlg_impl.h \
	stop22.h \
	types.h \
	updatingdlg_impl.h \
	view.h 
